Corrected small bug (dark mode text on search bar).

--- a/src/templates/header/header.css
+++ b/src/templates/header/header.css
@@ -47,6 +47,7 @@
     border: none;
     outline: none;
     background-color: transparent;
+    color: var(--text-primary);
 }
 
 .header__search__selectors {
